[package]
name = "masala"
version = "0.2.1"
edition = "2018"
description = "Automatic curry. Yum!"
repository = "https://github.com/pard68/masala"
license = "GPL-3.0-only"
authors = ["Ian S. Pringle"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.9"
quote = "1.0"

[dependencies.syn]
version = "1.0"
features = ["full"]

[lib]
proc-macro = true  # this is important!
